# simple-totp-rs

./: Cargo.toml  LICENSE  README.md
assets/: simple-totp.desktop
src/: main.rs
